--- a/Laboratorium 6/Zad2/docker-compose.yml
+++ b/Laboratorium 6/Zad2/docker-compose.yml
@@ -3,9 +3,9 @@ version: '3'
 services:
   api:
     build:
-      dockerfile: "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/backend/dockerfile"
-      context: "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/context"
+      dockerfile: "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/Zad2/lab05 z baz danych 2/dockerfile"
+      context: "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/Zad2/lab05 z baz danych 2/context"
     environment:
-      - "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/backend"
+      - "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/Zad2/lab05 z baz danych 2"
     ports:
       - "8000:5000"
