--- a/Laboratorium 6/Zad2/docker-compose.yml
+++ b/Laboratorium 6/Zad2/docker-compose.yml
@@ -3,9 +3,17 @@ version: '3'
 services:
   api:
     build:
-      dockerfile: "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/Zad2/lab05 z baz danych 2/dockerfile"
-      context: "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/Zad2/lab05 z baz danych 2/context"
+      dockerfile: "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/Zad2/lab04zbazdanych2/Dockerfile"
+      context: "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/Zad2/lab04zbazdanych2"
     environment:
-      - "C:/Users/macko/Desktop/TechnologieChmuroweNadfolder/TechnologieChmurowe/Laboratorium 6/Zad2/lab05 z baz danych 2"
-    ports:
-      - "8000:5000"
+      RACK_ENV: development
+      SHOW: 'true'
+      SESSION_SECRET:
+    ports: ["8000:5000"]
+  cache:
+    image: redis:6.2-alpine
+    restart: always
+    ports: [6379:6379]
+    command: redis-server --save 20 1 --loglevel warning 
+    #volumes: 
+    #  - cache:/data
