--- a/Laboratorium 6/Zad2/lab04zbazdanych2/package.json
+++ b/Laboratorium 6/Zad2/lab04zbazdanych2/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^10.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "ioredis": "^4.28.0"
+    "ioredis": "^4.19.2"
   }
 }
