robie dalej zad_2

--- a/KolokwiumMateuszMackowiak/zad_2/nginx/default.conf
+++ b/KolokwiumMateuszMackowiak/zad_2/nginx/default.conf
@@ -1,26 +1,28 @@
-upstream ... {
-    server ...
+upstream moviebackend {
+    server moviebackend:5000;
 }
 
-upstream ... {
-    server ...
+upstream moviefrontend {
+    server moviefrontend:3000;
 }
 
 server {
     listen 80;
+
+    location /film {
+        rewrite /film/(.*) /$1 break;
+        proxy_pass http://moviebackend;
+    }
+
     location / {
-        proxy_pass ...
+        proxy_pass http://moviefrontend;
     }
 
     location /sockjs-node {
-        proxy_pass ...
+        proxy_pass http://moviefrontend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
     }
-
-    location /api {
-        rewrite /api/(.*) /$1 break;
-        proxy_pass ...
-    }
 }
+
