--- a/KolokwiumMateuszMackowiak/zad_2/backend/package.json
+++ b/KolokwiumMateuszMackowiak/zad_2/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --inspect=0.0.0.0 index.js"
   },
   "author": "",
   "license": "ISC",
