Mongo działa, da się połączyć z nim przez cli, teraz jeszcze musze tak skonfigurowac expressa do mongo zeby dzialal na porcie innym niz 5000

--- a/Projekt/Frontend/deployment.yaml
+++ b/Projekt/Frontend/deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 metadata:
   name: hello
 spec:
-  replicas: 2
+  replicas: 2 #2 bo kopia zapasowa
   selector:
     matchLabels:
       app: hello
