--- a/Projekt/BackendMongo/mongodb-yamls/mongodb-pvc.yaml
+++ b/Projekt/BackendMongo/mongodb-yamls/mongodb-pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: project-pvc
+  name: pvc
 spec:
+  storageClassName: manual
   accessModes:
-  - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 50Mi
-  storageClassName: ""
+      storage: 1Gi
