--- a/Projekt/BackendMongo/mongodb-yamls/mongodb-nodeport-svc.yaml
+++ b/Projekt/BackendMongo/mongodb-yamls/mongodb-nodeport-svc.yaml
@@ -13,5 +13,6 @@ spec:
   selector:
     app: mongo
   type: NodePort
-status:
-  loadBalancer: {}
+  #type: ClusterIP
+#status:
+#  loadBalancer: {}
