--- a/Projekt/BackendMongo/package.json
+++ b/Projekt/BackendMongo/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "mongodb": "^4.7.0",
     "mongoose": "^5.10.9"
   }
 }
