--- a/Projekt/Frontend/service.yaml
+++ b/Projekt/Frontend/service.yaml
@@ -1,7 +1,7 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: hello
+  name: reactfrontend
 spec:
   type: NodePort
   ports:
@@ -10,4 +10,4 @@ spec:
       protocol: TCP
       nodePort: 31000
   selector:
-    app: hello
+    app: reactfrontend
