--- a/Projekt/BackendRedis/Dockerfile
+++ b/Projekt/BackendRedis/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:14.5.0-alpine
-WORKDIR './opt/AppRedis'
+FROM node:alpine
+WORKDIR './app'
 COPY ./package.json ./
 RUN npm install
 COPY . .
 EXPOSE 5001
-CMD ["npm", "run", "start"]
+CMD ["node", "index.js"]
